2018-08-24  Antti Koivisto  <antti@apple.com>

        Allow creating WeakPtrs to const objects
        https://bugs.webkit.org/show_bug.cgi?id=188785

        Reviewed by Geoff Garen.

        const Foo foo;
        WeakPtr<const Foo> weakConstFoo = makeWeakPtr(foo);

        * wtf/WeakPtr.h:
        (WTF::WeakPtrFactory::createWeakPtr const):

        Add a separate factory function for const T.
        The underlying WeakReference is kept non-const in all cases.

2018-08-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        [Linux] Cache the memory footprint and only update it after 1 second
        https://bugs.webkit.org/show_bug.cgi?id=188791

        Reviewed by Yusuke Suzuki.

        Getting the memory footprint is an expensive operation in Linux. When called multiple times, the CPU usage is
        too much (see bug #188787). We could cache the result for at least 1 second to ensure we don't call it more than
        once per second.

        * wtf/linux/MemoryFootprintLinux.cpp:
        (WTF::forEachLine):
        (WTF::computeMemoryFootprint):
        (WTF::memoryFootprint):

2018-08-20  Saam barati  <sbarati@apple.com>

        Inline DataView accesses into DFG/FTL
        https://bugs.webkit.org/show_bug.cgi?id=188573
        <rdar://problem/43286746>

        Reviewed by Michael Saboff.

        * wtf/TriState.h:

2018-08-19  Yusuke Suzuki  <yusukesuzuki@slowstart.org>

        [WTF] Add WTF::unalignedLoad and WTF::unalignedStore
        https://bugs.webkit.org/show_bug.cgi?id=188716

        Reviewed by Darin Adler.

        While some CPUs allow unaligned accesses to memory, doing it in C++ with `reinterpret_cast<>` is
        undefined behavior. This patch adds WTF::{unalignedLoad,unalignedStore} helper functions, which
        can load from and store to the pointer in an unaligned manner.
        Actual implementation uses `memcpy`. This can be optimized to direct unaligned access operations